# bdk-cpp

./: .dockerignore  .gitattributes  .gitignore  .kateproject  CMakeLists.txt  CMakeLists_old.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_SUBNET.md  Dockerfile  Doxyfile  LICENSE  README.md  build-proto.sh  build.sh  clang-format  deployedcontracts  docker-compose.yml  reset-blockchain.sh  sonar-project.properties  start-local-testnet.sh  stop-local-testnet.sh  sync.prf  update_binaries.sh
src/bench/: CMakeLists.txt  block.h
src/bins/bdkd/: CMakeLists.txt  main.cpp
src/bins/bdkd-discovery/: CMakeLists.txt  main.cpp
src/bins/bdkd-tests/: CMakeLists.txt
src/bins/btv-server/: CMakeLists.txt  main.cpp
src/bins/contractabigenerator/: CMakeLists.txt  main.cpp
src/bins/faucet-api/: CMakeLists.txt  main-tester.cpp  main.cpp
src/bins/network-sim/: CMakeLists.txt  main.cpp
src/bins/networkdeployer/: CMakeLists.txt  main.cpp
src/bins/orbitersdkd/: CMakeLists.txt  main.cpp
src/bins/orbitersdkd-discovery/: CMakeLists.txt  main.cpp
src/bins/orbitersdkd-tests/: CMakeLists.txt
src/contract/: CMakeLists.txt  abi.cpp  abi.h  basemessage.h  blockobservers.cpp  blockobservers.h  calldispatcher.h  calltracer.cpp  calltracer.h  common.cpp  common.h  concepts.h  contract.cpp  contract.h  contractcalllogger.cpp  contractcalllogger.h  contractcallstate.cpp  contractcallstate.h  contractfactory.cpp  contractfactory.h  contracthost.cpp  contracthost.h  contractmanager.cpp  contractmanager.h  contractstack.h  costs.h  cppcontractexecutor.h  customcontracts.h  dexv2factory.cpp  dexv2factory.h  dexv2library.cpp  dexv2library.h  dexv2pair.cpp  dexv2pair.h  dexv2router02.cpp  dexv2router02.h  dynamiccontract.cpp  dynamiccontract.h  encodedmessages.h  erc20.cpp  (+26 more)
src/contract/cpp/: callexecutor.cpp  callexecutor.h  message.h
src/contract/dexv2/: dexv2factory.cpp  dexv2factory.h  dexv2library.cpp  dexv2library.h  dexv2pair.cpp  dexv2pair.h  dexv2router02.cpp  dexv2router02.h  uq112x112.h
src/contract/evm/: anycallhandler.h  callexecutor.cpp  callexecutor.h  message.h
src/contract/messages/: anyencodedmessagehandler.h  basemessage.h  common.h  concepts.h  cppcontractexecutor.h  evmcontractexecutor.cpp  evmcontractexecutor.h  executioncontext.cpp  executioncontext.h  gas.h  messagedispatcher.h  precompiledcontractexecutor.cpp  precompiledcontractexecutor.h  traits.h
src/contract/precompiles/: blake2f.cpp  ecrecover.cpp  modexp.cpp  precompiles.h  ripemd160.cpp  ripemd160.hpp  sha256.cpp
src/contract/templates/: accesscontrol.cpp  accesscontrol.h  accesscontrolwithoperators.cpp  accesscontrolwithoperators.h  attributes.cpp  attributes.h  bombergame.cpp  bombergame.h  bomberlobby.cpp  bomberlobby.h  btvcommon.cpp  btvcommon.h  btvenergy.cpp  btvenergy.h  btvplayer.cpp  btvplayer.h  btvproposals.cpp  btvproposals.h  buildthevoid.cpp  buildthevoid.h  enumerableaccounts.h  enumerableattributes.h  enumerablenftattributes.h  enumerabletokens.h  enumerabletreasury.h  erc20.cpp  erc20.h  erc20snapshot.cpp  erc20snapshot.h  erc20wrapper.cpp  erc20wrapper.h  erc2981.cpp  erc2981.h  erc721.cpp  erc721.h  erc721enumerable.cpp  erc721enumerable.h  erc721royalty.cpp  erc721royalty.h  erc721test.cpp  (+40 more)
src/contract/trace/: call.cpp  call.h  callstatus.h  calltrace.cpp  calltrace.h  calltype.h
src/contract/traits/: method.h
src/contract/variables/: counters.h  enumerableset.h  pausable.cpp  pausable.h  reentrancyguard.h  safeaddress.h  safearray.h  safebase.cpp  safebase.h  safebool.h  safebytes.h  safeenumerablemap.h  safeenumerableset.h  safeint.cpp  safeint.h  safemaphash.h  safemultiset.h  safestring.h  safetuple.h  safeuint.cpp  safeuint.h  safeuint112_t.h  safeuint128_t.h  safeuint160_t.h  safeuint16_t.h  safeuint224_t.h  safeuint256_t.h  safeuint32_t.h  safeuint64_t.h  safeuint8_t.h  safeunorderedmap.h  safevector.h
src/core/: CMakeLists.txt  block.cpp  block.h  blockchain.cpp  blockchain.h  blockchainRPC.cpp  blockchain_old.h  blockmanager.cpp  blockmanager.h  broadcaster.cpp  broadcaster.h  chainHead.cpp  chainHead.h  chainTip.cpp  chainTip.h  comet.cpp  comet.h  consensus.cpp  consensus.h  db.cpp  db.h  dump.cpp  dump.h  evmhost.hpp  rdpos.cpp  rdpos.h  secp256k1Wrapper.cpp  secp256k1Wrapper.h  snowmanVM.cpp  snowmanVM.h  state.cpp  state.h  storage.cpp  storage.h  subnet.cpp  subnet.h  subnetRPC.cpp  transaction.cpp  transaction.h  typedefs.h  (+2 more)
src/net/: CMakeLists.txt  P2PClient.cpp  P2PClient.h  P2PEncoding.cpp  P2PEncoding.h  P2PManager.cpp  P2PManager.h  P2PServer.cpp  P2PServer.h  grpcclient.cpp  grpcclient.h  grpcserver.cpp  grpcserver.h  httpserver.cpp  httpserver.h  p2p.cpp  p2p.h  p2pMsg.cpp
src/net/abci/: abcihandler.h  abcinetserver.cpp  abcinetserver.h  abcinetsession.cpp  abcinetsession.h  abciserver.cpp  abciserver.h
src/net/http/: httpbase.cpp  httpbase.h  httpclient.cpp  httpclient.h  httplistener.cpp  httplistener.h  httpparser.cpp  httpparser.h  httpserver.cpp  httpserver.h  httpsession.cpp  httpsession.h  noderpcinterface.h
src/net/p2p/: Encoding.md  broadcaster.cpp  broadcaster.h  client.cpp  client.h  discovery.cpp  discovery.h  discoverythread.cpp  encoding.cpp  encoding.h  managerbase.cpp  managerbase.h  managerdiscovery.cpp  managerdiscovery.h  managernormal.cpp  managernormal.h  nodeconns.cpp  nodeconns.h  p2pbase.h  p2pclient.cpp  p2pclient.h  p2pdiscoveryworker.cpp  p2pdiscoveryworker.h  p2pencoding.cpp  p2pencoding.h  p2pmanagerbase.cpp  p2pserver.cpp  (+10 more)
src/tools/: CMakeLists.txt  blockManager.json  genesis.cpp
src/utils/: CMakeLists.txt  address.cpp  address.h  block.cpp  block.h  bucketcache.h  bytes.h  bytesinterface.h  clargs.cpp  clargs.h  contractreflectioninterface.cpp  contractreflectioninterface.h  db.cpp  db.h  dump.h  dynamicexception.h  dynamicexception.tpp  ecdsa.cpp  ecdsa.h  eventsdb.cpp  eventsdb.h  evmcconv.cpp  evmcconv.h  finalizedblock.cpp  finalizedblock.h  finally.h  fixedbytes.h  hash.cpp  hash.h  hex.cpp  hex.h  intconv.cpp  intconv.h  jsonabi.cpp  jsonabi.h  logger.h  merkle.cpp  merkle.h  mpt.cpp  mpt.h  (+26 more)
(+2905 files in other folders)
